--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@nuxt/ui-pro": "^3.1.1",
+    "date-fns": "^4.1.0",
     "nuxt": "^3.17.3",
+    "valibot": "^1.1.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.24.4"
   }
 }
